--- a/electronics.html
+++ b/electronics.html
@@ -161,7 +161,7 @@
                         <h4 class="aa-product-title"><a href="products/mp3player.html">Philips GoGear Mix</a></h4>
                         <span class="aa-product-price">Rs. 400</span>
                         <p class="aa-product-descrip">Philips' innovative FullSound technology faithfully restores sonic details to compressed MP3 music, dramatically enriching and enhancing it, so you can experience CD music without any distortion.</p>
-                        <p class="aa-product-descrip">Expect Delivery in 1 Days</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1 Day</p>
                       </figcaption>
                     </figure>                          
                   </li>
@@ -173,7 +173,127 @@
                         <h4 class="aa-product-title"><a href="products/kettle.html">Tandem Electric Kettle</a></h4>
                         <span class="aa-product-price">Rs. 250</span>
                         <p class="aa-product-descrip">Tandem is a part of a 20-year-old diversified Lifelong group. The company is committed to providing superior quality products across categories namely home, personal care, kitchen and wellness, at affordable prices.</p>
-                        <p class="aa-product-descrip">Expect Delivery in 1 Days</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1 Day</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/boatmi.jpg" alt="headphones img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Boat Rockerz 400 MI Edition Headphones</a></h4>
+                        <span class="aa-product-price">Rs. 400</span>
+                        <p class="aa-product-descrip">Now just stop worrying about wires hanging from here and there. Wired is passé. Connect with any Bluetooth device, connect and play. Plug into nirvana.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1 Day</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/calci.jpg" alt="calculator img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Calculator</a></h4>
+                        <span class="aa-product-price">Rs. 80</span>
+                        <p class="aa-product-descrip">An electronic calculator is typically a portable electronic device used to perform calculations, ranging from basic arithmetic to complex mathematics. Very useful in exams.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 12 Hours</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/pcb.jpg" alt="pcb img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Printed Circuit Board</a></h4>
+                        <span class="aa-product-price">Rs. 40</span>
+                        <p class="aa-product-descrip">A printed circuit board (PCB) mechanically supports and electrically connects electronic/electrical components using conductive tracks & pads etched from one or more sheet layers of copper.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 12 Hours</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/arduino.jpg" alt="arduino img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Arduino</a></h4>
+                        <span class="aa-product-price">Rs. 450</span>
+                        <p class="aa-product-descrip">The Arduino UNO is an open-source microcontroller board which is equipped with sets of digital and analog input/output pins that may be interfaced to various expansion boards and circuits.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 12 Hours</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/press.jpg" alt="press img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Bajaj Allianz iron</a></h4>
+                        <span class="aa-product-price">Rs. 350</span>
+                        <p class="aa-product-descrip">Iron your clothes without leaving any crease with Bajaj Iron. It has non-stick coated soleplate for efficiency and durability. The chord length measures 2.5 mtrs for easy ironing experience.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1 Day</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/speaker.jpg" alt="speaker img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Corseca Speakers</a></h4>
+                        <span class="aa-product-price">Rs. 400</span>
+                        <p class="aa-product-descrip">Wireless Bluetooth portable speaker. Versatile connectivity - Bluetooth, aux-in, FM radio, TF card and USB MP3 playback. Excellent audio quality in a tiny form factor. Long playtime up to 3 hours.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1 Day</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/realme.jpg" alt="realme img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Real Me Mobile</a></h4>
+                        <span class="aa-product-price">Rs. 2000</span>
+                        <p class="aa-product-descrip">Realme best selfie camera ever with Sony IMX576 sensor. AI 25MP, India's selfie pro. World 1st smartphone with Helio P70, packing a 6.3-inch FHD+ Dewdrop screen in fiery gold, ambitious black, brave blue.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1.5 Days</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/calculator.jpg" alt="calculator img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Calculator</a></h4>
+                        <span class="aa-product-price">Rs. 700</span>
+                        <p class="aa-product-descrip">An electronic calculator is typically a portable electronic device used to perform calculations, ranging from basic arithmetic to complex mathematics. Very useful in exams.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 12 Hours</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="products/lenovolaptop.html"><img src="img/electronics/lenovoideapad.jpg" alt="laptop img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="products/lenovolaptop.html">Lenovo IdeaPad S330</a></h4>
+                        <span class="aa-product-price">Rs. 19000</span>
+                        <p class="aa-product-descrip">Sometimes it’s best to keep things simple. Stacked with premium processing and advanced graphics options, the Idea Pad 330 is as powerful as it is easy to use.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 2 Days</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/leddisplay.jpg" alt="led img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">LED Display</a></h4>
+                        <span class="aa-product-price">Rs. 30</span>
+                        <p class="aa-product-descrip">A LED display is a flat panel display that uses an array of light-emitting diodes as pixels for a video display. Their brightness allows them to be used outdoors where they are visible in the sun for store signs and billboards.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 12 Hours</p>
                       </figcaption>
                     </figure>                          
                   </li>
