--- a/index.html
+++ b/index.html
@@ -35,6 +35,31 @@
         .searchbox {
             text-align: center;
         }
+        .dropdown button {
+            width: 30%;
+        }
+        .btn-danger {
+            border: #031d82 2px;
+            background-color:  #fff;
+            color: #031d82;
+        }
+        .dropdown-menu{
+            position: relative;
+        }
+        .dropdown-submenu {
+            position: absolute;
+            top: 0;
+            left: 100%;
+            white-space: nowrap;
+            background: white;
+            border: 1px solid #ccc;
+            box-shadow: 3px 3px 6px rgba(0,0,0,.3);
+        }
+        .dropdown-menu a, .dropdown-submenu a {
+            display: block;
+            padding: 10px;
+        }
+
         .searchbox .search {
             width: 50%;
             height: 40px;
@@ -69,42 +94,108 @@
         </div>
         <div class="container">
             <div class="searchbox">
+                <div class="dropdown">
+                    <button class="btn btn-danger dropdown-toggle" type="button" data-toggle="dropdown">Choose State
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Andhra Pradesh<span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Arunachal Pradesh <span class="caret"></span></a>
+                        </li>   
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Assam <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Bihar <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Chhattisgarh <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Goa <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Gujarat <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Haryana <span class="caret"></span></a>
+                        </li>                           
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Himachal Pradesh <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Jammu & Kashmir <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Jharkhand <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Karnataka <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Kerala <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Madhya Pradesh <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Maharashtra <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Manipur <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Meghalaya <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Nagaland <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Odisha <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Punjab <span class="caret"></span></a>
+                            <ul class="dropdown-submenu">
+                                <li><a tabindex="-1" href="#">UIET Hoshiarpur</a></li>
+                                <li><a tabindex="-1" href="#">UIET Chandigarh</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Rajasthan <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Sikkim <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Tamil Nadu <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Telangana <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Tripura <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Uttar Pradesh <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">Uttarakhand <span class="caret"></span></a>
+                        </li>
+                        <li>
+                            <a class="test" tabindex="-1" href="#">West Bengal <span class="caret"></span></a>
+                        </li>
+                    </ul>
+                </div>
                 <form name="" action="#" method="POST">
-                    <select name=slist class="search">
-                        <option value="" class="states">Choose State.....</option>
-                        <option value="Andhra Pradesh">Andhra Pradesh</option>
-                        <option value="Arunachal Pradesh">Arunachal Pradesh</option>
-                        <option value="Assam">Assam</option>
-                        <option value="Bihar">Bihar</option>
-                        <option value="Chhattisgarh">Chhattisgarh</option>
-                        <option value="Goa">Goa</option>
-                        <option value="Gujarat">Gujarat</option>
-                        <option value="Haryana">Haryana</option>
-                        <option value="Himachal Pradesh">Himachal Pradesh</option>
-                        <option value="Jammu and Kashmir">Jammu and Kashmir</option>
-                        <option value="Jharkhand">Jharkhand</option>
-                        <option value="Karnataka">Karnataka</option>
-                        <option value="Kerala">Kerala</option>
-                        <option value="Madhya Pradesh">Madhya Pradesh</option>
-                        <option value="Maharashtra">Maharashtra</option>
-                        <option value="Manipur">Manipur</option>
-                        <option value="Meghalaya">Meghalaya</option>
-                        <option value="Mizoram">Mizoram</option>
-                        <option value="Nagaland">Nagaland</option>
-                        <option value="Orissa">Orissa</option>
-                        <a href="home.html"><option value="Punjab">Punjab</option></a>
-                        <option value="Rajasthan">Rajasthan</option>
-                        <option value="Sikkim">Sikkim</option>
-                        <option value="Tamil Nadu">Tamil Nadu</option>
-                        <option value="Telangana">Telangana</option>
-                        <option value="Tripura">Tripura</option>
-                        <option value="Uttaranchal">Uttarakhand</option>
-                        <option value="Uttar Pradesh">Uttar Pradesh</option>
-                        <option value="West Bengal">West Bengal</option>
-                    </select><br>
                     <input type="submit" class="submit" name="submit" value="Search">
                 </form>
             </div>
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
