--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>CollegeAdda | Home</title>
+    <link rel="icon" type="image/jpg" href="img/favicon.jpg" sizes="32x32">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/jquery.smartmenus.bootstrap.css" rel="stylesheet">
@@ -185,7 +186,7 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="index.html">Home </a></li>
+                <li><a href="home.html">Home </a></li>
                 <li><a href="stationaries.html">Stationaries </a></li>
                 <li><a href="electronics.html">Electronics </a></li>
                 <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
@@ -461,52 +462,6 @@
                         </li>
                       </ul>
                     </div>
-                    <!-- Start Others Product Category -->
-                    <!-- <div class="tab-pane fade" id="electronics">
-                      <ul class="row aa-product-catg">
-                        <li class="col-lg-3 col-sm-6 col-12">
-                          <figure>
-                            <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
-                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
-                            <figcaption>
-                              <h4 class="aa-product-title"><a href="#">This is Title</a></h4>
-                              <span class="aa-product-price">Rs. 100</span>
-                            </figcaption>
-                          </figure>                         
-                        </li>
-                        <li class="col-lg-3 col-sm-6 col-12">
-                          <figure>
-                            <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
-                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
-                            <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                              <span class="aa-product-price">Rs. 100</span>
-                            </figcaption>
-                          </figure>                         
-                        </li>
-                        <li class="col-lg-3 col-sm-6 col-12">
-                          <figure>
-                            <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
-                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
-                            <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                              <span class="aa-product-price">Rs. 100</span>
-                            </figcaption>
-                          </figure>                          
-                        </li>
-                        <li class="col-lg-3 col-sm-6 col-12">
-                          <figure>
-                            <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
-                            <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
-                            <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                              <span class="aa-product-price">Rs. 100</span>
-                            </figcaption>
-                          </figure>                          
-                        </li>
-                      </ul>
-                      <a class="aa-browse-btn" href="others.html">Browse all Product <span class="fa fa-long-arrow-right"></span></a>
-                    </div> -->
                   </div>
                 </div>
               </div>
@@ -533,8 +488,6 @@
         <span class="button-label">Product:</span>
         <input type="radio" name="fill-graph" id="f-none" /><label for="f-none">None</label>
         <input type="radio" name="fill-graph" id="f-product1" checked="checked" /><label for="f-product1">Products</label>
-        <!-- <input type="radio" name="fill-graph" id="f-product2" /><label for="f-product2">Electronics</label>
-        <input type="radio" name="fill-graph" id="f-product3" /><label for="f-product3">Rooms</label> -->
         <ul class="graph-container">
           <li>
             <span>Notes</span>
