--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>CollegeAdda | Login</title>
+    <link rel="icon" type="image/jpg" href="img/favicon.jpg" sizes="32x32">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">   
     <link href="css/jquery.smartmenus.bootstrap.css" rel="stylesheet">
@@ -105,7 +106,7 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="stationaries.html">Stationaries </a></li>
                 <li><a href="electronics.html">Electronics </a></li>
                 <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
@@ -143,9 +144,9 @@
                       <label for="">Username or Email Address<span>*</span></label>
                       <input type="text" name="Email" placeholder="Username or Email">
                       <label for="">Password<span>*</span></label>
-                      <input type="password" name="Email" placeholder="Password">
+                      <input type="password" name="Password" placeholder="Password">
                       <button type="submit" class="aa-browse-btn" id="myBtn">Login</button>
-                      <label class="rememberme" for="rememberme"><input type="checkbox" name="checkbox" id="rememberme"> Remember Me </label>
+                      <label class="rememberme" for="rememberme"><input type="checkbox" name="Checkbox" id="rememberme"> Remember Me </label>
                       <div id="myModal" class="modal">
                         <div class="modal-content">
                           <span class="close">&times;</span>
