--- a/selldonate.html
+++ b/selldonate.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>CollegeAdda | Sell/Donate</title>
+    <link rel="icon" type="image/jpg" href="img/favicon.jpg" sizes="32x32">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/jquery.smartmenus.bootstrap.css" rel="stylesheet">
@@ -126,7 +127,7 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="stationaries.html">Stationaries </a></li>
                 <li><a href="electronics.html">Electronics </a></li>
                 <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
@@ -166,32 +167,32 @@
                       <label for="">Branch & Year</label>
                       <input type="text" name="Branch" placeholder="Branch/Year">
                       <label for="">Roll Number</label>
-                      <input type="text" name="Roll" placeholder="Roll No.">
+                      <input type="text" name="Roll No" placeholder="Roll No.">
                       <fieldset>
                         <label for="">Choose One of the Following.....</label><br>
-                        <input type="radio" id="sell" name="productoption" value="option1">
+                        <input type="radio" id="sell" name="ProductOption" value="option1">
                         <label id="sd" for="sell">Sell </label>
-                        <input type="radio" id="donate" name="productoption" value="option2">
+                        <input type="radio" id="donate" name="ProductOption" value="option2">
                         <label for="donate">Donate </label>
                       </fieldset><br>
                       <div class="noshow1">
                         <label for="">Product Name</label>
-                        <input type="text" placeholder="Name">
+                        <input type="text" name="ProductName" placeholder="Name">
                         <label for="category">Category</label><br>
-                        <select id="category" name="category">
+                        <select id="category" name="Category">
                           <option value="category1">Choose One......</option>
                           <option value="category2">Stationaries</option>
                           <option value="category3">Electronics</option>
                           <option value="category4">Rooms </option>
                         </select><br><br>
                         <label for="">Input Image</label><br>
-                        <input type="file" id="" name="pic" accept="image/*"><br>
+                        <input type="file" id="" name="Pic" accept="image/*"><br>
                       </div>
                       <div class="noshow2">
                         <label for="">Price</label>
                         <input type="text" name="Price" placeholder="Rs.">
                         <label for="">Description</label><br>
-                        <textarea id="message" name="message"></textarea><br>
+                        <textarea id="message" name="Message"></textarea><br>
                       </div>
                       <button class="aa-browse-btn" id="myBtn">Submit</button>
                       <div id="myModal" class="modal">
