--- a/hostelpgrooms.html
+++ b/hostelpgrooms.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>CollegeAdda | Hostel/PG Rooms</title>
+    <link rel="icon" type="image/jpg" href="img/favicon.jpg" sizes="32x32">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">   
     <link href="css/jquery.smartmenus.bootstrap.css" rel="stylesheet">
@@ -71,7 +72,7 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="stationaries.html">Stationaries </a></li>
                 <li><a href="electronics.html">Electronics </a></li>
                 <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
