--- a/home.html
+++ b/home.html
@@ -234,12 +234,12 @@
               </li>         
               <li>
                 <div class="seq-model">
-                  <img data-seq src="img/slider/4.jpg" alt="Slide img">
+                  <img data-seq src="img/donatebanner.jpg" alt="Slide img">
                 </div>
-                <div class="seq-title">
+                <!-- <div class="seq-title">
                   <h2 data-seq>Donate Us</h2>                
                   <p data-seq>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, illum.</p>
-                </div>
+                </div> -->
               </li>
             </ul>
           </div>
