--- a/home.html
+++ b/home.html
@@ -323,7 +323,6 @@
                     <li class="active"><a href="#men" data-toggle="tab">Stationaries</a></li>
                     <li><a href="#women" data-toggle="tab">Electronics</a></li>
                     <li><a href="#sports" data-toggle="tab">Rooms</a></li>
-                    <!-- <li><a href="#electronics" data-toggle="tab">Others</a></li> -->
                   </ul>
                   <div class="tab-content">
                     <div class="tab-pane fade in active" id="men">
@@ -364,6 +363,46 @@
                             <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                             <figcaption>
                               <h4 class="aa-product-title"><a href="products/polymernotes.html">Polymers Notes</a></h4>
+                              <span class="aa-product-price">Rs. 13</span>
+                            </figcaption>
+                          </figure>  
+                        </li>
+                        <li class="col-lg-3 col-sm-6 col-12">
+                          <figure>
+                            <a class="aa-product-img" href="products/chempracticalmanual.html"><img src="img/stationaries/chempracticalmanual.jpg" alt="manual img"></a>
+                            <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <figcaption>
+                              <h4 class="aa-product-title"><a href="products/chempracticalmanual.html">Chemistry Practical Manual</a></h4>
+                              <span class="aa-product-price">Rs. 25</span>
+                            </figcaption>
+                          </figure>                        
+                        </li>
+                        <li class="col-lg-3 col-sm-6 col-12">
+                          <figure>
+                            <a class="aa-product-img" href="products/catalysisnotes.html"><img src="img/stationaries/catalysisnotes.jpg" alt="catalysisnotes img"></a>
+                            <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <figcaption>
+                              <h4 class="aa-product-title"><a href="products/catalysisnotes.html">Catalysis Notes</a></h4>
+                              <span class="aa-product-price">Rs. 15</span>
+                            </figcaption>
+                          </figure>                         
+                        </li>
+                        <li class="col-lg-3 col-sm-6 col-12">
+                          <figure>
+                            <a class="aa-product-img" href="products/icse.html"><img src="img/stationaries/icse.jpg" alt="icse img"></a>
+                            <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <figcaption>
+                              <h4 class="aa-product-title"><a href="products/icse.html">Computer Fundamentals</a></h4>
+                              <span class="aa-product-price">Rs. 150</span>
+                            </figcaption>
+                          </figure>                         
+                        </li>
+                        <li class="col-lg-3 col-sm-6 col-12">
+                          <figure>
+                            <a class="aa-product-img" href="products/uvnotes.html"><img src="img/stationaries/uvnotes.jpg" alt="uvnotes img"></a>
+                            <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <figcaption>
+                              <h4 class="aa-product-title"><a href="products/uvnotes.html">UV-VIS Notes</a></h4>
                               <span class="aa-product-price">Rs. 13</span>
                             </figcaption>
                           </figure>  
@@ -413,8 +452,49 @@
                               <span class="aa-product-price">Rs. 3000</span>
                             </figcaption>
                           </figure>                          
+                        </li>
+                        <li class="col-lg-3 col-sm-6 col-12">
+                          <figure>
+                            <a class="aa-product-img" href="products/mp3player.html"><img src="img/electronics/mp3player.jpg" alt="mp3player img"></a>
+                            <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <figcaption>
+                              <h4 class="aa-product-title"><a href="products/mp3player.html">Philips GoGear Mix</a></h4>
+                              <span class="aa-product-price">Rs. 400</span>
+                            </figcaption>
+                          </figure>                          
+                        </li>
+                        <li class="col-lg-3 col-sm-6 col-12">
+                          <figure>
+                            <a class="aa-product-img" href="products/boatheadphones.html"><img src="img/electronics/boatmi.jpg" alt="boatmi img"></a>
+                            <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <figcaption>
+                              <h4 class="aa-product-title"><a href="products/boatheadphones.html">Boat Rockerz 400 MI Edition Headphones</a></h4>
+                              <span class="aa-product-price">Rs. 400</span>
+                            </figcaption>
+                          </figure>                          
+                        </li>
+                        <li class="col-lg-3 col-sm-6 col-12">
+                          <figure>
+                            <a class="aa-product-img" href="electronics.html"><img src="img/electronics/calci.jpg" alt="calci img"></a>
+                            <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <figcaption>
+                              <h4 class="aa-product-title"><a href="electronics.html">Calculator</a></h4>
+                              <span class="aa-product-price">Rs. 80</span>
+                            </figcaption>
+                          </figure>                          
+                        </li>
+                        <li class="col-lg-3 col-sm-6 col-12">
+                          <figure>
+                            <a class="aa-product-img" href="electronics.html"><img src="img/electronics/arduino.jpg" alt="arduino img"></a>
+                            <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                            <figcaption>
+                              <h4 class="aa-product-title"><a href="electronics.html">Arduino</a></h4>
+                              <span class="aa-product-price">Rs. 450</span>
+                            </figcaption>
+                          </figure>                          
                         </li>                      
                       </ul>
+
                       <a class="aa-browse-btn" href="electronics.html">Browse all Product <span class="fa fa-long-arrow-right"></span></a>
                     </div>
                     <!-- start rooms product category -->
