--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
         body {
             background-color: #031d82;
         }
-        /* .image {
-            text-align: center;
-            margin-top: 5%;
-        } */
         .vertext {
             margin-top: 20%;
             text-align: center;
@@ -27,7 +23,14 @@
         .vertext h1 {
             font-size: 3.8em;
             font-weight: 500;
-
+        }
+        @media only screen and (max-width: 450px) {
+            .vertext h1 {
+                font-size: 3.5em;
+            }
+            .vertext h6 {
+                font-size: 1.5em;
+            }
         }
         .vertext h6 {
             font-size: 1.8em;
@@ -116,11 +119,6 @@
     </style>
 
     <body>
-        <div class="container-fluid">
-            <div class="image">
-                <!-- <a href="index.html"><img src="img/logo.jpg" alt="logo" width="100px" height="100px;"></a> -->
-            </div>
-        </div>
         <div class="container">
             <div class="vertext">
                 <h1><span style="color: #fff001">College</span><span style="color: #fbfefe;">Adda</span></h1>
